syntax = "proto3";

package wpb;

option go_package = "./;wpb";



enum Status {
     Error = 0;
     WillJoin = 1; // 将要加入集群
     Joining = 3; // 加入中
     Joined = 5; // 已加入集群
     WillRemove = 6; // 将要从集群中移除
     Removed = 7; // 已被移除集群
}

enum Role {
     Unknown = 0;
     Follower = 1;
     Candidate = 2;
     PreCandidate = 3;
     Leader = 4;
}

message CMDReq {
     uint64 id = 1;
     uint32 cmd  = 2;
     bytes data = 3;
}

message  CMDResp {
     uint64 id = 1;
     Status status = 2; // 请求状态
     bytes data = 3; // 返回数据
}


message ClusterConfig {
    repeated Peer peers = 1;
    uint64 version = 2;
}

message Peer {
     uint64 id = 1;
     string addr = 2;
     bool  applicant = 3; // 是否是加入集群申请人
     Status status = 4;
     Role   role = 5;
     uint64 term = 6;
     uint64 vote = 7;
     uint64 lead = 8;
    
}
